# Weird-Chess

./: .gitignore  CMakeLists.txt
Libraries/Nuklear/: nuklear.c
engine/graphics/: Shader.cpp
engine/io/: ResourceLoader.cpp  Window.cpp  Window.h
engine/utils/: Timer.cpp
glad/: glad.h
res/pics/: GrassTiles.png-autosave.kra  GrassTiles.png~  eater.png-autosave.kra  icon.png~
res/shaders/: backgroundFragment.glsl  backgroundVertex.glsl  carinteriorFragment.glsl  carinteriorVertex.glsl  fastnessFragment.glsl  goalFragment.glsl  mainFragment.glsl  mainVertex.glsl  nkFragment.glsl  nkVertex.glsl  nosbottleFragment.glsl  nosbottleVertex.glsl  racelightFragment.glsl  racelightVertex.glsl  tachometerFragment.glsl  tachometerVertex.glsl  tireboostFragment.glsl  tireboostVertex.glsl  upgradeFragment.glsl
src/: main.cpp
src/engine/: glad.c
src/engine/graphics/: Camera.h  Shader.h  Sprite.cpp  Sprite.h
src/engine/io/: ResourceLoader.h  Window.cpp  Window.h
src/engine/utils/: Timer.h
